test/Fail/Issue3262.err
Issue3262.agda:12.1-15: error: [Syntax.MissingWithClauses]
Missing with-clauses for function f
